# zutility

zutility-be/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml
zutility-be/migrations/: 20260324170000_init_core.sql  20260324170500_order_dispatch_controls.sql
zutility-be/seeds/: seed_deposit_addresses.sql  seed_rate_snapshots.sql  seed_utilities.sql
zutility-be/src/: lib.rs  main.rs
zutility-be/src/config/: mod.rs
zutility-be/src/db/: mod.rs
zutility-be/src/domain/: order.rs
zutility-be/src/http/: auth.rs  docs.rs  error.rs  handlers.rs  mod.rs  types.rs
zutility-be/src/integrations/: mod.rs  utility_provider.rs
zutility-be/src/integrations/rates/: mod.rs
zutility-be/src/integrations/signing_service/: mod.rs
zutility-be/src/integrations/vtpass/: mod.rs
zutility-be/src/integrations/zcash/: mod.rs
zutility-be/src/jobs/: address_pool.rs  mod.rs  rate_refresher.rs  workers.rs
zutility-be/src/observability/: mod.rs
zutility-be/src/runtime/: mod.rs
zutility-be/src/ws/: mod.rs
zutility-be/tests/: address_pool.rs  bootstrap.rs  config.rs  db.rs  db_postgres.rs  domain.rs  http.rs  rates.rs  security.rs  vtpass_sandbox.rs  workers.rs  ws_http.rs  zcash.rs  zcash_paths.rs
zutility-fe/: .env.example  .gitignore  README.md  metadata.json  package-lock.json  package.json
zutility-fe/app/: globals.css  layout.tsx
zutility-fe/app/(app)/: layout.tsx
zutility-fe/app/(marketing)/: page.tsx
zutility-fe/components/3d/: ParticleField.tsx  WireframeSphere.tsx  (+1 more)
zutility-fe/lib/: api.ts  constants.ts  types.ts  utils.ts
zutility-fe/store/: auth.ts  order.ts
(+21 files in other folders)
